# hackathon-submission

./: .gitignore  README.md  chat_history.txt  config.py  description.txt  main.py  objective file.txt  process_chat.py  pyproject.toml  simulation_log_20250817_093015.json  simulation_log_20250817_115046.json  simulation_log_20250817_121039.json  structured_events.csv  utils.py  visulaize.html  whatsapp.txt  whatsapp_chat_20250817_121039.txt  whatsapp_chat_chatgpt_oss_12b.txt  whatsapp_chat_gemma_12b_4fp.txt
agents/: modules.py
models/: state.py
simulation/: processes.py
submission/: Chat Refinement Prompt.txt  presentation.html
tests/: test_utils_definitions.py
visualization/: visualisation-full-journey-partially-done.html  visualization-1.html
